crates/ars-components/src/overlay/tooltip/snapshots/ars_components__overlay__tooltip__tests__tooltip_disabled.snap
---
source: crates/ars-components/src/overlay/tooltip/mod.rs
expression: "snapshot_api(&service.connect(&|_| {}))"
---
root:
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tooltip",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
    ],
    styles: [],
}
trigger:
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tooltip",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "tooltip-content-description",
            ),
        ),
        (
            Id,
            String(
                "tooltip-trigger",
            ),
        ),
    ],
    styles: [],
}
hidden_description:
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tooltip",
            ),
        ),
        (
            Data(
                "ars-visually-hidden",
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "tooltip-content-description",
            ),
        ),
    ],
    styles: [],
}
positioner:
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tooltip",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
    ],
    styles: [],
}
content:
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tooltip",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Id,
            String(
                "tooltip-content",
            ),
        ),
    ],
    styles: [],
}
arrow:
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "arrow",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tooltip",
            ),
        ),
    ],
    styles: [],
}
